# TJ_FX_ROBOT_CONTRL_SDK

./: .gitignore  pyproject.toml  setup.py
DEMO_PYTHON/: showcase_position.py
SDK_PYTHON/: fx_kine.py  fx_robot.py
contrlSDK/: CmplOpt.h  MarvinSDK.h  Robot.cpp  Robot.h  ShMem.cpp  ShMem.h
