[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "marvin_robot"
version = "0.1.0"
description = "Marvin robot SDK – kinematics and control"
requires-python = ">=3.8"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.tasks]
